--- a/initial-conf/www/wizard_initial.htm
+++ b/initial-conf/www/wizard_initial.htm
@@ -170,7 +170,7 @@
             }).jqmShow().animate({
                 width: newWidth,
                 height: newHeight,
-                top: newTop,
+                top: 0,
                 left: newLeft,
                 marginLeft: 0,
                 opacity: 1
