--- a/initial-conf/www/wizard_initial.htm
+++ b/initial-conf/www/wizard_initial.htm
@@ -67,9 +67,9 @@
         JAVASCRIPT
         .................................................................................
         -->
-        <script type="text/javascript" src="jquery-1.3.2.min.js">
+        <script type="text/javascript" src="js/jquery-1.3.2.min.js">
         </script>
-        <script src="jqModal.js" type="text/javascript">
+        <script src="js/jqModal.js" type="text/javascript">
         </script>
         <script type="text/javascript">
 	function load()
